--- a/index.html
+++ b/index.html
@@ -10,70 +10,85 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <title>Main Page</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <div>
+  <body class="body-center">
+    <header class="header-section">
+      <div class="container">
+        <div class="header-navigation">
           <a class="webstudio-link-1" href="index.html"
             ><span>Web</span>Studio</a
           >
+          <nav class="navigation">
+            <ul class="list-nav">
+              <li><a class="agency" href="index.html">Agencja</a></li>
+              <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
+              <li><a class="contact" href="kontakt.html">Kontakt</a></li>
+            </ul>
+          </nav>
+
+          <ul class="contact-list">
+            <li>
+              <a class="mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+
+            <li>
+              <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
+            </li>
+          </ul>
         </div>
-        <ul class="list">
-          <li><a class="agency" href="index.html">Agencja</a></li>
-          <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
-          <li><a class="contact" href="kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div>
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
       </div>
     </header>
     <main>
-      <div class="main">
-        <h1 class="main-header">
-          EFEKTYWNE ROZWIĄZANIA <br />
-          DLA WASZEGO BIZNESU
-        </h1>
-        <button type="button" class="button-service">Zamów usługę</button>
+      <div class="main-container">
+        <div class="container">
+          <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button type="button" class="button-service">Zamów usługę</button>
+        </div>
       </div>
-      <div>
-        <ul class="list">
-          <li>
-            <h4 class="feature-header">LOREM IPSUM</h4>
-            <p class="features-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="feature-header">LOREM IPSUM</h4>
-            <p class="features-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="feature-header">LOREM IPSUM</h4>
-            <p class="features-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="feature-header">LOREM IPSUM</h4>
-            <p class="features-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
+      <div class="feature-section">
+        <div class="container">
+          <ul class="feature-list">
+            <li>
+              <h4 class="feature-header">LOREM IPSUM</h4>
+              <p class="features-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="feature-header">LOREM IPSUM</h4>
+              <p class="features-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="feature-header">LOREM IPSUM</h4>
+              <p class="features-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="feature-header">LOREM IPSUM</h4>
+              <p class="features-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div>
+      <div class="what-we-do-section">
         <h2 class="what-we-do-header">Czym się zajmujemy</h2>
-        <ul class="list">
+        <ul class="image-list">
           <li>
             <img
               src="images/box1.jpg"
@@ -101,80 +116,90 @@
         </ul>
       </div>
 
-      <div class="team">
-        <h3 class="team-header">Nasz zespół</h3>
-        <ul class="list">
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/img1.jpg"
-                alt="mężczyzna ciemna koszula broda okulary"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-title">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/img2.jpg"
-                alt="kobieta frontend developer blond włosy"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-title">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/img3.jpg"
-                alt="mężczyzna marketing jasna koszula"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-title">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure class="team-card">
-              <img
-                src="images/img4.jpg"
-                alt="ui designer w okularach czarny t-shirt"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-title">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+      <div class="team-section">
+        <div class="container">
+          <h3 class="team-header">Nasz zespół</h3>
+          <section class="team-list-section">
+            <ul class="team-list">
+              <li>
+                <figure class="team-card">
+                  <img
+                    src="images/img1.jpg"
+                    alt="mężczyzna ciemna koszula broda okulary"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <p class="name">John Doe</p>
+                    <p class="job-title">Product Designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-card">
+                  <img
+                    src="images/img2.jpg"
+                    alt="kobieta frontend developer blond włosy"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <p class="name">John Doe</p>
+                    <p class="job-title">Frontend Developer</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-card">
+                  <img
+                    src="images/img3.jpg"
+                    alt="mężczyzna marketing jasna koszula"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <p class="name">John Doe</p>
+                    <p class="job-title">Marketing</p>
+                  </figcaption>
+                </figure>
+              </li>
+              <li>
+                <figure class="team-card">
+                  <img
+                    src="images/img4.jpg"
+                    alt="ui designer w okularach czarny t-shirt"
+                    width="270"
+                    height="260"
+                  />
+                  <figcaption>
+                    <p class="name">John Doe</p>
+                    <p class="job-title">UI Designer</p>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+          </section>
+        </div>
       </div>
     </main>
     <footer>
-      <div>
-        <a class="webstudio-link-2" href="index.html"><span>Web</span>Studio</a>
-        <ul class="list">
-          <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
-          <li>
-            <a class="mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li><a class="phone" href="tel:+48111111111">+48 111 111 111</a></li>
-        </ul>
+      <div class="footer-container">
+        <div class="container">
+          <a class="webstudio-link-2" href="index.html"
+            ><span>Web</span>Studio</a
+          >
+          <ul class="footer-list">
+            <li><address>m. Warszawa, Aleje Jerozolimskie 21</address></li>
+            <li>
+              <a class="mail" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
