dodanie klasy section z odstępami

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </div>
     </header>
     <main>
-      <div class="main-container">
+      <div class="main-container section">
         <div class="container">
           <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button" class="button-service">Zamów usługę</button>
         </div>
       </div>
-      <div class="feature-section">
+      <div class="feature-section section">
         <div class="container">
           <ul class="feature-list">
             <li>
@@ -86,7 +86,7 @@
           </ul>
         </div>
       </div>
-      <div class="what-we-do-section">
+      <div class="what-we-do-section section">
         <h2 class="what-we-do-header">Czym się zajmujemy</h2>
         <ul class="image-list">
           <li>
