--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <main>
-      <div class="main-portfolio">
+      <div class="main-portfolio section-2">
         <div class="container">
           <ul class="portfolio-button-list">
             <li>
@@ -73,7 +73,7 @@
           </ul>
         </div>
       </div>
-      <div class="container-table">
+      <div class="container-table section">
         <div class="container">
           <ul class="list-project-table">
             <li class="project-item">
