--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
 
           <ul class="contact-list">
             <li>
+              <svg class="contact-icon mail-icon">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>
               <a class="mail" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
 
             <li>
+              <svg class="contact-icon phone-icon">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>
               <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
             </li>
           </ul>
@@ -47,7 +53,6 @@
     </header>
     <main>
       <div class="main-container section">
-        
         <div class="container">
           <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
           <button type="button" class="button-service">Zamów usługę</button>
@@ -57,6 +62,10 @@
         <div class="container">
           <ul class="feature-list">
             <li>
+              <div class="feature-icon-bg">
+                <svg class="feature-icon" height="70" width="70"></svg>
+                <use href="images/icons.svg#icon-antena"></use>
+              </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -64,6 +73,10 @@
               </p>
             </li>
             <li>
+              <div class="feature-icon-bg">
+                <svg class="feature-icon" height="70" width="70"></svg>
+                <use href="images/icons.svg#icon-clock"></use>
+              </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -71,6 +84,10 @@
               </p>
             </li>
             <li>
+              <div class="feature-icon-bg">
+                <svg class="feature-icon" height="70" width="70"></svg>
+                <use href="images/icons.svg#icon-laptop"></use>
+              </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -78,6 +95,10 @@
               </p>
             </li>
             <li>
+              <div class="feature-icon-bg">
+                <svg class="feature-icon" height="70" width="70"></svg>
+                <use href="images/icons.svg#icon-astronaut-1"></use>
+              </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -133,6 +154,32 @@
                   <figcaption>
                     <p class="name">John Doe</p>
                     <p class="job-title">Product Designer</p>
+                    <div class="team-sm-icons-container">
+                      <ul class="team-sm-icons">
+                        <li>
+                          <svg>
+                            <svg id="icon-instagram-2" width="32" height="32" viewBox="0 0 32 32" x="0" y="352">
+                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                            
+                          </svg>
+                        </li>
+                        <li>
+                          <svg>
+                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                          </svg>
+                        </li>
+                        <li>
+                          <svg>
+                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                          </svg>
+                        </li>
+                        <li>
+                          <svg>
+                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                          </svg>
+                        </li>
+                      </ul>
+                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -182,6 +229,21 @@
           </section>
         </div>
       </div>
+      <div class="our-clients-section section">
+        <div class="container">
+          <h3 class="our-clients-header">Nasi klienci</h3>
+          <ul class="our-clients-list">
+            <li>
+              <div class="our-clients-item"></div>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-container">
@@ -199,6 +261,13 @@
             <li>
               <a class="phone" href="tel:+48111111111">+48 111 111 111</a>
             </li>
+          </ul>
+          <div>DOŁĄCZ DO NAS</div>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
           </ul>
         </div>
       </div>
