--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
           <ul class="feature-list">
             <li>
               <div class="feature-icon-bg">
-                <svg class="feature-icon" height="70" width="70"></svg>
-                <use href="images/icons.svg#icon-antena"></use>
+                <svg class="feature-icon">
+                  <use href="images/icons.svg#icon-antena"></use>
+                </svg>
               </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
@@ -74,8 +75,9 @@
             </li>
             <li>
               <div class="feature-icon-bg">
-                <svg class="feature-icon" height="70" width="70"></svg>
-                <use href="images/icons.svg#icon-clock"></use>
+                <svg class="feature-icon" height="70" width="70">
+                  <use href="images/icons.svg#icon-clock"></use>
+                </svg>
               </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
@@ -85,8 +87,9 @@
             </li>
             <li>
               <div class="feature-icon-bg">
-                <svg class="feature-icon" height="70" width="70"></svg>
-                <use href="images/icons.svg#icon-laptop"></use>
+                <svg class="feature-icon" height="70" width="70">
+                  <use href="images/icons.svg#icon-laptop"></use>
+                </svg>
               </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
@@ -96,8 +99,9 @@
             </li>
             <li>
               <div class="feature-icon-bg">
-                <svg class="feature-icon" height="70" width="70"></svg>
-                <use href="images/icons.svg#icon-astronaut-1"></use>
+                <svg class="feature-icon" height="70" width="70">
+                  <use href="images/icons.svg#icon-astronaut-1"></use>
+                </svg>
               </div>
               <h4 class="feature-header">LOREM IPSUM</h4>
               <p class="features-text">
@@ -157,25 +161,50 @@
                     <div class="team-sm-icons-container">
                       <ul class="team-sm-icons">
                         <li>
-                          <svg>
-                            <svg id="icon-instagram-2" width="32" height="32" viewBox="0 0 32 32" x="0" y="352">
-                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
-                            
+                          <svg
+                            id="icon-instagram-2"
+                            width="32"
+                            height="32"
+                            viewBox="0 0 32 32"
+                            x="0"
+                            y="352"
+                          >
+                            <circle
+                              class="team-sm-icons-bg"
+                              r="22"
+                              cx="22 "
+                              cy="22"
+                            />
                           </svg>
                         </li>
                         <li>
                           <svg>
-                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                            <circle
+                              class="team-sm-icons-bg"
+                              r="22"
+                              cx="22 "
+                              cy="22"
+                            />
                           </svg>
                         </li>
                         <li>
                           <svg>
-                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                            <circle
+                              class="team-sm-icons-bg"
+                              r="22"
+                              cx="22 "
+                              cy="22"
+                            />
                           </svg>
                         </li>
                         <li>
                           <svg>
-                            <circle class="team-sm-icons-bg" r="22" cx="22 "cy="22"/>
+                            <circle
+                              class="team-sm-icons-bg"
+                              r="22"
+                              cx="22 "
+                              cy="22"
+                            />
                           </svg>
                         </li>
                       </ul>
