--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul class="feature-list">
             <li>
               <div class="feature-icon-bg">
-                <svg class="feature-icon">
+                <svg class="feature-icon" height="70" width="70">
                   <use href="images/icons.svg#icon-antena"></use>
                 </svg>
               </div>
