--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="mystyle.css?v=1.0.2" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -163,22 +164,22 @@
                     <div class="team-sm-icons-container">
                       <ul class="sm-icons">
                         <li class="sm-circle-bg">
-                          <svg class="icon-ig" width="20" height="20">
+                          <svg class="sm-icon" width="20" height="20">
                             <use href="images/icons.svg#icon-instagram-2"></use>
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="icon-ig">
+                          <svg class="sm-icon">
                             <use href="images/icons.svg#icon-twitter"></use>
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="icon-ig">
+                          <svg class="sm-icon">
                             <use href="images/icons.svg#icon-fb"></use>
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="icon-ig">
+                          <svg class="sm-icon">
                              <use href="images/icons.svg#icon-linkedin-1"></use>
                           </svg>
                         </li>
