--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="team-sm-icons-container">
                       <ul class="sm-icons">
                         <li class="sm-circle-bg">
-                          <svg class="sm-icon" width="20" height="20">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-instagram-2"></use>
                           </svg>
                         </li>
