--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="sm-icon" width="20" height="20">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-twitter"></use>
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="sm-icon" width="20" height="20">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-fb"></use>
                           </svg>
                         </li>
                         <li class="sm-circle-bg">
-                          <svg class="sm-icon" width="20" height="20">
+                          <svg width="20" height="20">
                              <use href="images/icons.svg#icon-linkedin-1"></use>
                           </svg>
                         </li>
