--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="contact-list">
             <li class="contact-list-mail-link">
               <a class="mail" href="mailto:info@devstudio.com"
-                ><svg class="contact-icon mail-icon">
+                ><svg width="16" height="12">
                   <use href="images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -44,7 +44,7 @@
 
             <li class="contact-list-phone-link">
               <a class="phone" href="tel:+48111111111">
-                <svg class="contact-icon phone-icon">
+                <svg width="10" height="16">
                   <use href="images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +48 111 111 111</a
@@ -199,6 +199,30 @@
                   <figcaption>
                     <p class="name">John Doe</p>
                     <p class="job-title">Frontend Developer</p>
+                    <div class="team-sm-icons-container">
+                      <ul class="sm-icons">
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-fb"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                             <use href="images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </li>
+                      </ul>
+                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -213,6 +237,30 @@
                   <figcaption>
                     <p class="name">John Doe</p>
                     <p class="job-title">Marketing</p>
+                    <div class="team-sm-icons-container">
+                      <ul class="sm-icons">
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-fb"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                             <use href="images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </li>
+                      </ul>
+                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -227,6 +275,30 @@
                   <figcaption>
                     <p class="name">John Doe</p>
                     <p class="job-title">UI Designer</p>
+                    <div class="team-sm-icons-container">
+                      <ul class="sm-icons">
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-twitter"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                            <use href="images/icons.svg#icon-fb"></use>
+                          </svg>
+                        </li>
+                        <li class="sm-circle-bg">
+                          <svg width="20" height="20">
+                             <use href="images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </li>
+                      </ul>
+                    </div>
                   </figcaption>
                 </figure>
               </li>
@@ -309,22 +381,22 @@
           <div class="join-us">DOŁĄCZ DO NAS</div>
           <ul class="join-us-list">
                         <li class="footer-sm-circle-bg">
-                          <svg class="icon-ig" width="20" height="20">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-instagram-2"></use>
                           </svg>
                         </li>
-                        <li class="footer-sm-circle-bg" width="20" height="20">
-                          <svg class="icon-ig">
+                        <li class="footer-sm-circle-bg">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-twitter"></use>
                           </svg>
                         </li>
-                        <li class="footer-sm-circle-bg" width="20" height="20">
-                          <svg class="icon-ig">
+                        <li class="footer-sm-circle-bg">
+                          <svg width="20" height="20">
                             <use href="images/icons.svg#icon-fb"></use>
                           </svg>
                         </li>
-                        <li class="footer-sm-circle-bg" width="20" height="20">
-                          <svg class="icon-ig">
+                        <li class="footer-sm-circle-bg">
+                          <svg width="20" height="20">
                              <use href="images/icons.svg#icon-linkedin-1"></use>
                           </svg>
                         </li>
