--- a/index.html
+++ b/index.html
@@ -312,42 +312,42 @@
           <ul class="our-clients-list">
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig">
+                <svg width="41" height="46,7">
                   <use href="images/icons.svg#icon-group1"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig" height="46" width="41">
+                <svg width="40" height="52">
                   <use href="images/icons.svg#icon-group2"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig" height="41" width="43">
+                <svg width="43,46" height="41,18">
                   <use href="images/icons.svg#icon-group3"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig" height="40" width="84">
+                <svg width="84,44" height="40,62">
                   <use href="images/icons.svg#icon-group4"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig" height="45" width="62">
+                <svg width="62,54" height="45,43">
                   <use href="images/icons.svg#icon-group5"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg class="icon-ig" height="44" width="94">
+                <svg width="93,79" height="43,93">
                   <use href="images/icons.svg#icon-group6"></use>
                 </svg>
               </div>
