ikony porządki w css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <title>Main Page</title>
   </head>
-  <body class="body-center">
+  <body>
     <header class="header-section">
       <div class="container">
         <div class="header-navigation">
