--- a/index.html
+++ b/index.html
@@ -312,42 +312,42 @@
           <ul class="our-clients-list">
             <li>
               <div class="our-clients-item">
-                <svg width="41" height="46,7">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group1"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg width="40" height="52">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group2"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg width="21" height="41,18">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group3"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg width="84,44" height="40,62">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group4"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg width="62,54" height="45,43">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group5"></use>
                 </svg>
               </div>
             </li>
             <li>
               <div class="our-clients-item">
-                <svg width="93,79" height="43,93">
+                <svg height="52">
                   <use href="images/icons.svg#icon-group6"></use>
                 </svg>
               </div>
